[gd_scene load_steps=2 format=2]

[ext_resource path="res://SoundFX/SoundFX.gd" type="Script" id=1]

[node name="SoundFX" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="StreamPlayers" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StreamPlayers"]
bus = "SoundFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="StreamPlayers"]
bus = "SoundFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="StreamPlayers"]
bus = "SoundFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="StreamPlayers"]
bus = "SoundFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="StreamPlayers"]
bus = "SoundFX"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="StreamPlayers"]
bus = "SoundFX"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="StreamPlayers"]
bus = "SoundFX"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="StreamPlayers"]
bus = "SoundFX"

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="StreamPlayers"]
bus = "SoundFX"

[node name="StreamPlayers3D" type="Node" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="StreamPlayers3D"]
bus = "SoundFX"

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="StreamPlayers3D"]
bus = "SoundFX"

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="StreamPlayers3D"]
bus = "SoundFX"

[node name="AudioStreamPlayer3D4" type="AudioStreamPlayer3D" parent="StreamPlayers3D"]
bus = "SoundFX"

[node name="AudioStreamPlayer3D5" type="AudioStreamPlayer3D" parent="StreamPlayers3D"]
bus = "SoundFX"

[node name="AudioStreamPlayer3D6" type="AudioStreamPlayer3D" parent="StreamPlayers3D"]
bus = "SoundFX"

[node name="AudioStreamPlayer3D7" type="AudioStreamPlayer3D" parent="StreamPlayers3D"]
bus = "SoundFX"

[node name="AudioStreamPlayer3D8" type="AudioStreamPlayer3D" parent="StreamPlayers3D"]
bus = "SoundFX"

[node name="AudioStreamPlayer3D9" type="AudioStreamPlayer3D" parent="StreamPlayers3D"]
bus = "SoundFX"
